[project]
name = "accessflow"
version = "0.1.0"
description = "Data transfer between Excel spreadsheets and Access databases using Python"
authors = [{ name="Kaio Cândido Santiago", email="kaiocandidosantiago@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "pyodbc",
    "openpyxl"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"